Fix issue with height of ActionPhase on mobile. (#28)

--- a/src/main/ActionPhase.module.scss
+++ b/src/main/ActionPhase.module.scss
@@ -75,7 +75,9 @@
 
   .ActivePlayerColumn {
     padding-top: 48px;
-    overflow-x: hidden;
+    width: calc(100vw - 20px);
+
+    height: calc(100dvh - 130px);
   }
 
   .ActivePlayerSection {
